feat: enhance webhook data merging and add comprehensive tests
- Improved KycWebhookController with better data validation and merging
- Enhanced KycManager with robust webhook data processing
- Added comprehensive test coverage for webhook functionality
- Updated composer dependencies

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "asciisd/kyc-core",
-    "description": "Core KYC (Know Your Customer) functionality for Laravel applications",
+    "version": "1.4.0",
+    "description": "Core KYC (Know Your Customer) functionality for Laravel applications with enhanced webhook data merging",
     "type": "library",
     "license": "MIT",
     "authors": [
